@@ -2,7 +2,7 @@
 #'
 #' Functions to connect with a git server (remote) to fetch or push changes.
 #' The 'credentials' package is used to handle authentication, the
-#' [credentials vignette](https://cran.r-project.org/web/packages/credentials/vignettes/intro.html)
+#' [credentials vignette](https://docs.ropensci.org/credentials/articles/intro.html)
 #' explains the various authentication methods for SSH and HTTPS remotes.
 #'
 #' Use [git_fetch()] and [git_push()] to sync a local branch with a remote
