@@ -7,6 +7,7 @@
   - Conflicted files are reported by git_status() (#40)
   - Windows: libgit2 now finds ~/.gitconfig under $USERPROFILE (instead of Documents)
   - A git_signature object is now stored as a string instead of an externalptr
+  - The 'name' parameter in git_remote_ functions has been renamed to 'remote'
 
 0.3
   - Support for clone --mirror and push --mirror (#12)
